; ModuleID = '/home/carl/AnghaBench/reactos/base/system/services/extr_config.c_ScmOpenServiceKey.c'
source_filename = "/home/carl/AnghaBench/reactos/base/system/services/extr_config.c_ScmOpenServiceKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_LOCAL_MACHINE = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [34 x i32] [i32 83, i32 121, i32 115, i32 116, i32 101, i32 109, i32 92, i32 67, i32 117, i32 114, i32 114, i32 101, i32 110, i32 116, i32 67, i32 111, i32 110, i32 116, i32 114, i32 111, i32 108, i32 83, i32 101, i32 116, i32 92, i32 83, i32 101, i32 114, i32 118, i32 105, i32 99, i32 101, i32 115, i32 0], align 4
@KEY_READ = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ScmOpenServiceKey(i8* %0, i32 %1, i32** %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32** %2, i32*** %7, align 8
  store i32* null, i32** %8, align 8
  %10 = load i32**, i32*** %7, align 8
  store i32* null, i32** %10, align 8
  %11 = load i32*, i32** @HKEY_LOCAL_MACHINE, align 8
  %12 = load i32, i32* @KEY_READ, align 4
  %13 = call i64 @RegOpenKeyExW(i32* %11, i8* bitcast ([34 x i32]* @.str to i8*), i32 0, i32 %12, i32** %8)
  store i64 %13, i64* %9, align 8
  %14 = load i64, i64* %9, align 8
  %15 = load i64, i64* @ERROR_SUCCESS, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i64, i64* %9, align 8
  store i64 %18, i64* %4, align 8
  br label %28

19:                                               ; preds = %3
  %20 = load i32*, i32** %8, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32**, i32*** %7, align 8
  %24 = call i64 @RegOpenKeyExW(i32* %20, i8* %21, i32 0, i32 %22, i32** %23)
  store i64 %24, i64* %9, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @RegCloseKey(i32* %25)
  %27 = load i64, i64* %9, align 8
  store i64 %27, i64* %4, align 8
  br label %28

28:                                               ; preds = %19, %17
  %29 = load i64, i64* %4, align 8
  ret i64 %29
}

declare dso_local i64 @RegOpenKeyExW(i32*, i8*, i32, i32, i32**) #1

declare dso_local i32 @RegCloseKey(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
